--- a/Passenger_Counter_App/style.css
+++ b/Passenger_Counter_App/style.css
@@ -1,11 +1,24 @@
 body {
-  background-image: url("passenger\ img.jpg");
+  background-image: url("passenger.jpg");
   background-size: cover;
 
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: bold;
+  font-family: "Poppins", BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+    Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 600;
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+#counter-container {
+  width: 30%;
+  margin: 8% auto;
+  background-color: whitesmoke;
+  background: #ece9e985;
+  box-shadow: 4px 4px 4px rgba(38, 38, 38, 0.4);
+  padding: 1rem;
+  border-radius: 0.5rem;
 }
 
 h1 {
@@ -18,22 +31,31 @@ h2 {
   margin-top: 0;
   margin-bottom: 20px;
 }
+p {
+  font-size: 2rem;
+}
 
 button {
-  border: none;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  color: white;
-  font-weight: bold;
-  width: 200px;
-  margin-bottom: 5px;
-  border-radius: 5px;
+    border: none;
+    padding: 10px;
+    padding-bottom: 10px;
+    color: rgba(220, 217, 217, 0.9);
+    font-weight: 600;
+    width: 200px;
+    margin-bottom: 5px;
+    border-radius: 0.5rem;
 }
 
 #increment-btn {
-  background: darkred;
+  background: rgba(143, 62, 62, 0.9);
+  font-size: 1.5rem;
+  box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.3);
+  gap: 10px;
 }
 
 #save-btn {
-  background: darkgreen;
+  background: rgb(2, 123, 2);
+  box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.3);
+  font-size: 1.5rem;
+  margin-left: 5px;
 }
