--- a/scrimba_Solo_Projects/style.css
+++ b/scrimba_Solo_Projects/style.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.cdnfonts.com/css/cursed-timer-ulil");
 
 body {
-  margin: 0;
+  /* margin: 0; */
+  background-image: url(basketball\ image.jpg);
 }
 
 .container {
@@ -9,10 +10,11 @@ body {
   justify-content: space-around;
   align-items: center;
   margin: 5% auto;
-  max-width: 35.9375rem;
-  min-height: 24.0625rem;
+  max-width: 38rem;
+  min-height: 27rem;
   box-shadow: 0.25rem 0.25rem 0.25rem 0 rgba(0, 0, 0, 0.3);
-  background-color: darkblue;
+  background-color: rgb(28, 28, 85);
+  border-radius: 0.5rem;
 }
 h3 {
   color: #eee;
@@ -22,6 +24,7 @@ h3 {
   font-style: normal;
   font-weight: 700;
   line-height: 2.24331rem;
+  text-shadow: 4px 4px 4px rgba(116, 116, 116, 0.3);
 }
 
 .score-container {
@@ -32,11 +35,37 @@ h3 {
 
 #home-score,
 #guest-score {
+  margin-top: 6%;
+
   color: #f94f6d;
   text-align: center;
   font-family: "Cursed Timer ULiL";
-  font-size: 5.625rem;
+  font-size: 5rem;
   font-style: normal;
   font-weight: 400;
   line-height: 7.91663rem;
+  width: 11rem;
+  height: 7.5rem;
+  flex-shrink: 0;
+  background-color: #080001;
+  border-radius: 0.5rem;
+  box-shadow: 4px 4px 4px #272c3a;
+}
+button {
+  color: #eee;
+  text-align: center;
+  font-family: "Cursed Timer ULiL";
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.73825rem;
+  border-radius: 0.3125rem;
+  border: 2px solid #e0e2e5;
+  background-color: rgb(28, 28, 85);
+  padding: 1%rem;
+  width: 3rem;
+  height: 3rem;
+  margin: 22% 0 0 0.5rem;
+  cursor: pointer;
+  box-shadow: 4px 4px 4px #586075;
 }
